fix(css): prevent content from overflowing in control panel

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -411,7 +411,7 @@ input[type="number"] {
     width: 16%;
     height: 100%;
     background-color: rgb(30, 30, 30);
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
 }
 
 .layout-controls {
